# stealth-core

./: .env.example  .gitignore  .gitnexus.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  agents.md  anti-learn.md  api.md  architecture.md  banned.md  benchmarks.md  brain.md  commands.md  contributing.md  design.md  docker-compose.yml  faq.md  fix.md  goal.md  graph-report.md  graphify.md  history.md  infisical.md  issues.md  learn.md  opencode.md  plan.md  pyproject.toml  registry-actuation.md  registry-credentials.md  registry-google.md  registry-graphify.md  registry-macos.md  registry-perception.md  registry-skills.md  registry-surveys.md  registry.md  (+11 more)
.github/: CODEOWNERS  CONTRIBUTING.md
.github/workflows/: benchmark.yml  ci.yml
stealth_core/: __init__.py  breaker.py  circuit_breaker.py  constants.py  exceptions.py  graceful_degradation.py  guardian.py  health_check.py  logging_config.py  metrics.py  process_guardian.py  retry.py  secrets.py  state_manager.py
tests/: conftest.py  test_integration.py
tests/chaos/: test_chaos_resilience.py
