[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
strict = true
warn_unused_ignores = true

[tool.pylint.messages_control]
max-line-length = 100
disable = ["C0114", "C0115"]
